# aws_alerting

./: README.md  pyproject.toml
src/: example.ipynb  main.py
src/email_template/: content.html  main.html
src/tools/: helper_functions.py  prepare_data.py  send_email_attachment.py  send_email_basic.py  send_email_formatted.py
