[tool.poetry]
name = "aws_alerting"
version = "0.1.0"
description = "Examples leveraging AWS cloud services to send email"
authors = ["Marcello Victorino <victorinoeng@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.8.1"
jinja2 = "^3.1.2"
boto3 = "^1.26.104"
evidently = "^0.2.8"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pytest = "^7.2.2"
isort = "^5.12.0"
pre-commit = "^3.2.1"
mypy = "^1.1.1"
flake8 = "^6.0.0"
notebook = "^6.5.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
